# dali-mcp

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
dali/: __init__.py  auth.py  client.py  gemini.py  guides.py  intent.py  scorer.py  server.py
dali/data/guides/: flux.json  higgsfield.json  imagen.json  kling.json  midjourney.json  sora.json  veo3.json
docs/: best-practices.md
npm/: README.md  package-lock.json  package.json
skills/: dali-creative-flow.md
