[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dali-mcp"
version = "0.5.2"
description = "Dali by Lulu — creative intelligence MCP. Score your prompt before you spend the credit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "ai", "prompts", "creative", "image", "video", "midjourney", "veo", "higgsfield", "flux", "lulu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
dali = "dali.server:main"

[project.urls]
Homepage   = "https://dali.getlulu.dev"
Repository = "https://github.com/Lulu-The-Narwhal/dali-mcp"

[tool.hatch.build.targets.wheel]
packages = ["dali"]
